--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 	<meta name="description"
 		content="Добрый день! Меня зовут Римма, я дизайнер интерьеров. Помогу вам создать уютный и функциональный интерьер для вашей квартиры или дома. Буду сопровождать вас на всем пути, помогу подобрать и купить материалы, посоветую все. Помогу реализовать даже самые смелые ваши решения. После нашей работы вы получите современный уютный интерьер, который будет служить вам на протяжении долгих лет и радовать вас!">
 	<meta name="keywords"
