--- a/index.html
+++ b/index.html
@@ -530,6 +530,25 @@
 					</div>
 				</a>
 
+				<a href="#modal4" class="project project4">
+					<img src="images\works\preview\4.webp" alt="Project 4">
+					<div class="project-overlay">
+						<p class="project-title">Уютная квартира на 21-ом этаже</p>
+						<p class="project-desc">Квартира</p>
+						<i class="project-icon"><svg fill="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="m22 1a1.0011 1.0011 0 0 1 1 1v20a1.0011 1.0011 0 0 1 -1 1h-20a1.0011 1.0011 0 0 1 -1-1v-20a1.0011 1.0011 0 0 1 1-1zm0-1h-20a2 2 0 0 0 -2 2v20a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2v-20a2 2 0 0 0 -2-2z" />
+								</g>
+								<g id="Layer_3" data-name="Layer 3">
+									<path d="m12 23.5a.5.5 0 0 1 -.5-.5v-22a.5.5 0 0 1 1 0v22a.5.5 0 0 1 -.5.5z" />
+									<path d="m12 16.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
+									<path d="m23 8.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
+								</g>
+							</svg>
+						</i>
+					</div>
+				</a>
+
 			</div>
 
 			<div id="modal1" class="portfolio__modal modal1">
@@ -748,6 +767,122 @@
 					</div>
 				</div>
 			</div>
+
+			<div id="modal4" class="portfolio__modal modal4">
+				<div class="portfolio__modal-content">
+					<button class="portfolio__modal-close"><svg xmlns="http://www.w3.org/2000/svg"
+							class="portfolio__modal-close-icon" viewBox="0 0 512 512">
+							<path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
+								d="M368 368L144 144M368 144L144 368" /></svg></button>
+					<div class="portfolio__slider">
+						<button class="portfolio__carousel-prev" onclick="showImage(-1)"><svg xmlns="http://www.w3.org/2000/svg"
+								class="portfolio__prev" viewBox="0 0 512 512">
+								<path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="48"
+									d="M328 112L184 256l144 144" /></svg></button>
+						<div class="portfolio__slider-container">
+							<div class="slider-slide active">
+								<img src="images/works/4/1.webp" alt="work-41">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/2.webp" alt="work-42">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/3.webp" alt="work-43">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/4.webp" alt="work-44">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/5.webp" alt="work-45">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/6.webp" alt="work-46">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/7.webp" alt="work-47">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/8.webp" alt="work-48">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/9.webp" alt="work-49">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/10.webp" alt="work-410">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/11.webp" alt="work-411">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/12.webp" alt="work-412">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/13.webp" alt="work-413">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/14.webp" alt="work-414">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/15.webp" alt="work-415">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/16.webp" alt="work-416">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/17.webp" alt="work-417">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/18.webp" alt="work-418">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/19.webp" alt="work-419">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/16.webp" alt="work-420">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/17.webp" alt="work-421">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/18.webp" alt="work-422">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/19.webp" alt="work-423">
+							</div>
+						</div>
+						<button class="portfolio__carousel-next" onclick="showImage(+1)"><svg xmlns="http://www.w3.org/2000/svg"
+								class="portfolio__forward" viewBox="0 0 512 512">
+								<path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="48"
+									d="M184 112l144 144-144 144" /></svg></button>
+					</div>
+					<div class="slider__dots">
+						<div class="slider__dot active"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+					</div>
+				</div>
+			</div>
+
 		</section>
 		<section class="steps" id="steps">
 			<h2 class="steps__title">/этапы работы</h2>
