--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
 			<hr>
 			<div class="footeer">
 				<p class="copyright">Copyright © 2023 RimmaDesign</p>
-				<a class="politics" href="">Политика конфиденциальности</a>
+				<a class="politics" href="docs/Privacy Policy.pdf">Политика конфиденциальности</a>
 				<a class="offer" href="docs\Договор_RimmaDesign.pdf">Мой договор</a>
 			</div>
 		</div>
