--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					</div>
 				</div>
 				<div class="pint">
-					<p>Я на <a href="">Pinterest</a></p>
+					<p>Я на <a href="https://pin.it/7m5enJh">Pinterest</a></p>
 				</div>
 			</div>
 			<div class="div-about-2">
@@ -1020,13 +1020,7 @@
 				<p class="title-description-heading">Социальные сети</p>
 				<ul>
 					<li>
-						<p class="contacts-info"><a class="contacts-info" href="#">Pinterest</a></p>
-					</li>
-					<li>
-						<p class="contacts-info"><a class="contacts-info" href="#">Telegram</a></p>
-					</li>
-					<li>
-						<p class="contacts-info"><a class="contacts-info" href="#">Instagram</a></p>
+						<p class="contacts-info"><a class="contacts-info" href="https://pin.it/7m5enJh">Pinterest</a></p>
 					</li>
 				</ul>
 			</div>
