--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 	<meta name="description"
 		content="Добрый день! Меня зовут Римма, я дизайнер интерьеров. Помогу вам создать уютный и функциональный интерьер для вашей квартиры или дома. Буду сопровождать вас на всем пути, помогу подобрать и купить материалы, посоветую все. Помогу реализовать даже самые смелые ваши решения. После нашей работы вы получите современный уютный интерьер, который будет служить вам на протяжении долгих лет и радовать вас!">
 	<meta name="keywords"
 		content="дизайн интерьера, дизайн, дизайн дома, дизайн квартиры, ремонт квартиры, ремонт дома, ремонт под ключ, ремонт дома под ключ, стойка, строительство домов, строительство квартир, евроремонт, современный дизайн, современная квартира, modern дизайн">
 	<link rel="canonical" href="https://rimmadesing.ru">
+	<meta name="yandex-verification" content="388710365418cebb" />
 	<link href="styles.css" rel="stylesheet">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -32,12 +32,10 @@
 	<meta name="theme-color" content="#ffffff">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Montserrat:wght@100;300;400;500;600;700&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&amp;family=Montserrat:wght@100;300;400;500;600;700&amp;display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
 	<title>RimmaDesign.ru</title>
-	<script src="js\telmask.js"></script>
+	<script src="js/telmask.js"></script>
 </head>
 
 <body>
@@ -107,8 +105,8 @@
 										<path
 											d="M391 480c-19.52 0-46.94-7.06-88-30-49.93-28-88.55-53.85-138.21-103.38C116.91 298.77 93.61 267.79 61 208.45c-36.84-67-30.56-102.12-23.54-117.13C45.82 73.38 58.16 62.65 74.11 52a176.3 176.3 0 0128.64-15.2c1-.43 1.93-.84 2.76-1.21 4.95-2.23 12.45-5.6 21.95-2 6.34 2.38 12 7.25 20.86 16 18.17 17.92 43 57.83 52.16 77.43 6.15 13.21 10.22 21.93 10.23 31.71 0 11.45-5.76 20.28-12.75 29.81-1.31 1.79-2.61 3.5-3.87 5.16-7.61 10-9.28 12.89-8.18 18.05 2.23 10.37 18.86 41.24 46.19 68.51s57.31 42.85 67.72 45.07c5.38 1.15 8.33-.59 18.65-8.47 1.48-1.13 3-2.3 4.59-3.47 10.66-7.93 19.08-13.54 30.26-13.54h.06c9.73 0 18.06 4.22 31.86 11.18 18 9.08 59.11 33.59 77.14 51.78 8.77 8.84 13.66 14.48 16.05 20.81 3.6 9.53.21 17-2 22-.37.83-.78 1.74-1.21 2.75a176.49 176.49 0 01-15.29 28.58c-10.63 15.9-21.4 28.21-39.38 36.58A67.42 67.42 0 01391 480z" />
 									</svg>
-									<input class="input-field" type="tel" id="phone-call" name="phone-call" data-tel-input
-										placeholder="+7 (900) 123-45-67" maxlength="18" requred="required" autocomplete="tel" /><label
+									<input class="input-field" type="tel" id="phone-call" name="phone-call" required data-tel-input
+										placeholder="+7 (900) 123-45-67" maxlength="18" autocomplete="tel" /><label
 										for="phone-call"></label>
 								</div>
 								<button class="call-for__btn">Позвоните мне</button>
@@ -118,16 +116,16 @@
 				</div>
 			</div>
 			<div class="div-main-2">
-				<img class="main__first-image" src="images\main\1.webp" alt="main_1" width="450px" height="810px">
-				<img class="main__second-image" src="images\main\2.webp" alt="main_2" width="1096px" height="472px">
-				<img class="main__third-image" src="images\main\3.webp" alt="main_3" width="650px" height="650px">
-				<img class="main__fourth-image" src="images\main\4.webp" alt="main_4" width="592px" height="666px">
+				<img class="main__first-image" src="images/main/1.webp" alt="main_1" width="450px" height="810px">
+				<img class="main__second-image" src="images/main/2.webp" alt="main_2" width="1096px" height="472px">
+				<img class="main__third-image" src="images/main/3.webp" alt="main_3" width="650px" height="650px">
+				<img class="main__fourth-image" src="images/main/4.webp" alt="main_4" width="592px" height="666px">
 			</div>
 		</section>
 		<section class="about" id="about">
 			<div class="div-about-1">
 				<h2 class="typing">Обо мне</h2>
-				<img class="ProfilePhotoMobile" src="images\about\infophoto.webp" alt="ProfilePhotoMobile" width="300px"
+				<img class="ProfilePhotoMobile" src="images/about/infophoto.webp" alt="ProfilePhotoMobile" width="300px"
 					height="300px">
 				<p class="text"> Добрый день! Я - дизайнер Ваших интерьеров. Работаю вместе с командой профессиональных
 					строителей. Миссия
@@ -156,7 +154,7 @@
 				</div>
 			</div>
 			<div class="div-about-2">
-				<img class="ProfilePhoto" src="images\about\infophoto.webp" alt="ProfilePhoto" width="435px" height="435px">
+				<img class="ProfilePhoto" src="images/about/infophoto.webp" alt="ProfilePhoto" width="435px" height="435px">
 			</div>
 		</section>
 		<section class="price" id="price">
@@ -168,8 +166,8 @@
 					<div class="pricediv left">
 						<div class="el-2">
 							<h3>Технический проект</h3>
-							<div class="vectorprice"><object type="image/svg+xml" data="icons\price\texn.svg"
-									aria-label="this object has text"></object></div>
+							<div class="vectorprice"><object type="image/svg+xml" data="icons/price/texn.svg"
+									aria-label="texn-project"></object></div>
 						</div>
 						<div class="el-3">
 							<ul class="price-description">
@@ -227,8 +225,8 @@
 					<div class="pricediv left">
 						<div class="el-4">
 							<h3>Базовый проект</h3>
-							<div class="vectorprice"><object type="image/svg+xml" data="icons\price\base.svg"
-									aria-label="this object has text"></object></div>
+							<div class="vectorprice"><object type="image/svg+xml" data="icons/price/base.svg"
+									aria-label="bace-icon"></object></div>
 						</div>
 						<div class="el-5">
 							<ul class="price-description">
@@ -306,8 +304,8 @@
 					<div class="pricediv left">
 						<div class="el-6">
 							<h3>Полный проект</h3>
-							<div class="vectorprice"><object type="image/svg+xml" data="icons\price\full.svg"
-									aria-label="this object has text"></object></div>
+							<div class="vectorprice"><object type="image/svg+xml" data="icons/price/full.svg"
+									aria-label="full-project-icon"></object></div>
 						</div>
 						<div class="el-7">
 							<ul class="price-description">
@@ -389,8 +387,8 @@
 					<div class="pricediv left">
 						<div class="el-8">
 							<h3>Авторский надзор</h3>
-							<div class="vectorprice"><object type="image/svg+xml" data="icons\price\avtor.svg"
-									aria-label="this object has text"></object></div>
+							<div class="vectorprice"><object type="image/svg+xml" data="icons/price/avtor.svg"
+									aria-label="autot-view"></object></div>
 						</div>
 						<div class="el-9">
 							<p class="price-description">В рамках надзора осуществляется контроль за ходом
@@ -448,8 +446,8 @@
 		</section>
 		<section class="vr360" id="vr360">
 			<div class="vr-1">
-				<object type="image/svg+xml" data="icons\vr\360_view_ibivag7cow6n.svg"
-					aria-label="this object has text"></object>
+				<object type="image/svg+xml" data="icons/vr/360_view_ibivag7cow6n.svg"
+					aria-label="360-icon"></object>
 				<h2>360<sup>o</sup> и VR-обзор вашего будущего интерьера</h2>
 			</div>
 			<div class="vr-2">
@@ -459,9 +457,9 @@
 				</div>
 				<div class="div360-qr">
 					<a class="qr" href="https://api2.enscape3d.com/v3/view/b7ff3766-69ab-4484-9388-49b4330b8ed7"><img
-							src="images\vr\QR1.webp" alt="qr-first" width="230px" height="230px"></a>
+							src="images/vr/QR1.webp" alt="qr-first" width="230px" height="230px"></a>
 					<a class="qr" href="https://api2.enscape3d.com/v3/view/7c54e500-0798-4e59-b044-e176aabe78fc"><img
-							src="images\vr\Qr2.webp" alt="qr-second" width="230px" height="230px"></a>
+							src="images/vr/Qr2.webp" alt="qr-second" width="230px" height="230px"></a>
 				</div>
 			</div>
 			<div class="vr-3">
@@ -481,8 +479,7 @@
 						<i class="project-icon"><svg fill="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="m22 1a1.0011 1.0011 0 0 1 1 1v20a1.0011 1.0011 0 0 1 -1 1h-20a1.0011 1.0011 0 0 1 -1-1v-20a1.0011 1.0011 0 0 1 1-1zm0-1h-20a2 2 0 0 0 -2 2v20a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2v-20a2 2 0 0 0 -2-2z" />
-								</g>
-								<g id="Layer_3" data-name="Layer 3">
+								<g data-name="Layer 3">
 									<path d="m12 23.5a.5.5 0 0 1 -.5-.5v-22a.5.5 0 0 1 1 0v22a.5.5 0 0 1 -.5.5z" />
 									<path d="m12 16.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
 									<path d="m23 8.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
@@ -493,15 +490,14 @@
 				</a>
 
 				<a href="#modal2" class="project project2">
-					<img src="images\works\preview\2.webp" alt="Project 2">
+					<img src="images/works/preview/2.webp" alt="Project 2">
 					<div class="project-overlay">
 						<p class="project-title">Роскошная трешка в Нижнем</p>
 						<p class="project-desc">Квартира</p>
 						<i class="project-icon"><svg fill="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="m22 1a1.0011 1.0011 0 0 1 1 1v20a1.0011 1.0011 0 0 1 -1 1h-20a1.0011 1.0011 0 0 1 -1-1v-20a1.0011 1.0011 0 0 1 1-1zm0-1h-20a2 2 0 0 0 -2 2v20a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2v-20a2 2 0 0 0 -2-2z" />
-								</g>
-								<g id="Layer_3" data-name="Layer 3">
+								<g data-name="Layer 3">
 									<path d="m12 23.5a.5.5 0 0 1 -.5-.5v-22a.5.5 0 0 1 1 0v22a.5.5 0 0 1 -.5.5z" />
 									<path d="m12 16.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
 									<path d="m23 8.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
@@ -512,15 +508,14 @@
 				</a>
 
 				<a href="#modal3" class="project project3">
-					<img src="images\works\preview\3.webp" alt="Project 3">
+					<img src="images/works/preview/3.webp" alt="Project 3">
 					<div class="project-overlay">
 						<p class="project-title">Просторный солнечный коттедж</p>
 						<p class="project-desc">Загородный дом</p>
 						<i class="project-icon"><svg fill="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="m22 1a1.0011 1.0011 0 0 1 1 1v20a1.0011 1.0011 0 0 1 -1 1h-20a1.0011 1.0011 0 0 1 -1-1v-20a1.0011 1.0011 0 0 1 1-1zm0-1h-20a2 2 0 0 0 -2 2v20a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2v-20a2 2 0 0 0 -2-2z" />
-								</g>
-								<g id="Layer_3" data-name="Layer 3">
+								<g data-name="Layer 3">
 									<path d="m12 23.5a.5.5 0 0 1 -.5-.5v-22a.5.5 0 0 1 1 0v22a.5.5 0 0 1 -.5.5z" />
 									<path d="m12 16.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
 									<path d="m23 8.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
@@ -531,15 +526,14 @@
 				</a>
 
 				<a href="#modal4" class="project project4">
-					<img src="images\works\preview\4.webp" alt="Project 4">
+					<img src="images/works/preview/4.webp" alt="Project 4">
 					<div class="project-overlay">
 						<p class="project-title">Уютная квартира на 21-ом этаже</p>
 						<p class="project-desc">Квартира</p>
 						<i class="project-icon"><svg fill="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 								<path
 									d="m22 1a1.0011 1.0011 0 0 1 1 1v20a1.0011 1.0011 0 0 1 -1 1h-20a1.0011 1.0011 0 0 1 -1-1v-20a1.0011 1.0011 0 0 1 1-1zm0-1h-20a2 2 0 0 0 -2 2v20a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2v-20a2 2 0 0 0 -2-2z" />
-								</g>
-								<g id="Layer_3" data-name="Layer 3">
+								<g data-name="Layer 3">
 									<path d="m12 23.5a.5.5 0 0 1 -.5-.5v-22a.5.5 0 0 1 1 0v22a.5.5 0 0 1 -.5.5z" />
 									<path d="m12 16.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
 									<path d="m23 8.5h-11a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1z" />
@@ -977,7 +971,7 @@
 								d="M451 374c-15.88-16-54.34-39.35-73-48.76-24.3-12.24-26.3-13.24-45.4.95-12.74 9.47-21.21 17.93-36.12 14.75s-47.31-21.11-75.68-49.39-47.34-61.62-50.53-76.48 5.41-23.23 14.79-36c13.22-18 12.22-21 .92-45.3-8.81-18.9-32.84-57-48.9-72.8C119.9 44 119.9 47 108.83 51.6A160.15 160.15 0 0083 65.37C67 76 58.12 84.83 51.91 98.1s-9 44.38 23.07 102.64 54.57 88.05 101.14 134.49S258.5 406.64 310.85 436c64.76 36.27 89.6 29.2 102.91 23s22.18-15 32.83-31a159.09 159.09 0 0013.8-25.8C465 391.17 468 391.17 451 374z"
 								fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32" /></svg>
 						<input type="tel" name="phone-call" class="footer__field phone-footer" data-tel-input
-							placeholder="+7 (900) 123-45-67" maxlength="18" requred="required" autocomplete="tel" /> <label
+							placeholder="+7 (900) 123-45-67" maxlength="18" required autocomplete="tel" /> <label
 							for="phone-call"></label>
 						<button class="footer__form-btn">Позвоните мне</button>
 					</div>
@@ -1003,7 +997,7 @@
 				<p class="title-description-heading">Адрес</p>
 				<ul>
 					<li class="small">
-						<p class="contacts-info">Россия</pp>
+						<p class="contacts-info">Россия</p>
 					</li>
 					<li class="small">
 						<p class="contacts-info">Нижний Новгород</p>
@@ -1030,8 +1024,8 @@
 			<hr>
 			<div class="footeer">
 				<p class="copyright">Copyright © 2023 RimmaDesign</p>
-				<a class="politics" href="docs/Privacy Policy.pdf">Политика конфиденциальности</a>
-				<a class="offer" href="docs\Договор_RimmaDesign.pdf">Мой договор</a>
+				<a class="politics" href="docs/Privacy-Policy.pdf">Политика конфиденциальности</a>
+				<a class="offer" href="docs/Договор_RimmaDesign.pdf">Мой договор</a>
 			</div>
 		</div>
 	</footer>
@@ -1042,9 +1036,9 @@
 	<script src="js/stepsact.js"></script>
 	<script src="js/navhamburger.js"></script>
 	<script src="js/carouselmodal.js"></script>
-	<script src="js\pricing.js"></script>
-	<script src="js\popupmain.js"></script>
-	<script src="js\scrollup.js"></script>
+	<script src="js/pricing.js"></script>
+	<script src="js/popupmain.js"></script>
+	<script src="js/scrollup.js"></script>
 
 </body>
 
