--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
 	<title>RimmaDesign.ru</title>
 	<script src="js/telmask.js"></script>
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+	m[i].l=1*new Date();
+	for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+	k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+	ym(93762633, "init", {
+			 clickmap:true,
+			 trackLinks:true,
+			 accurateTrackBounce:true,
+			 webvisor:true,
+			 ecommerce:"dataLayer"
+	});
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/93762633" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
