--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 								<img src="images/works/3/8.webp" alt="work-38">
 							</div>
 							<div class="slider-slide">
-								<img src="images/works/3/9" alt="work-39">
+								<img src="images/works/3/9.webp" alt="work-39">
 							</div>
 						</div>
 						<button class="portfolio__carousel-next" onclick="showImage(+1)"><svg xmlns="http://www.w3.org/2000/svg"
