--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description"
 		content="Добрый день! Меня зовут Римма, я дизайнер интерьеров. Помогу вам создать уютный и функциональный интерьер для вашей квартиры или дома. Буду сопровождать вас на всем пути, помогу подобрать и купить материалы, посоветую все. Помогу реализовать даже самые смелые ваши решения. После нашей работы вы получите современный уютный интерьер, который будет служить вам на протяжении долгих лет и радовать вас!">
 	<meta name="keywords"
-		content="дизайн интерьера, дизайн, дизайн дома, дизайн квартиры, ремонт квартиры, ремонт дома, ремонт под ключ, ремонт дома под ключ, стойка, строительство домов, строительство квартир, евроремонт, современный дизайн, современная квартира, modern дизайн">
+		content="дизайн интерьера, дизайн, дизайн дома, дизайн квартиры, ремонт квартиры, ремонт дома, ремонт под ключ, ремонт дома под ключ, стойка, строительство домов, строительство квартир, евроремонт, современный дизайн, современная квартира, modern дизайн, классический дизайн, дизайнер, дизайнер интерьера, дизайн интерьера фото, дизайн интерьера кухни, дизайн интерьера квартиры, дизайн интерьера дома, дизайн интерьера коттеджа">
 	<link rel="canonical" href="https://rimmadesing.ru">
 	<meta name="yandex-verification" content="388710365418cebb" />
 	<link href="styles.css" rel="stylesheet">
@@ -32,28 +32,13 @@
 	<meta name="theme-color" content="#ffffff">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&amp;family=Montserrat:wght@100;300;400;500;600;700&amp;display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&amp;family=Montserrat:wght@100;300;400;500;600;700&amp;display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
 	<title>RimmaDesign.ru</title>
 	<script src="js/telmask.js"></script>
-	<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-	m[i].l=1*new Date();
-	for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-	k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-	ym(93762633, "init", {
-			 clickmap:true,
-			 trackLinks:true,
-			 accurateTrackBounce:true,
-			 webvisor:true,
-			 ecommerce:"dataLayer"
-	});
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/93762633" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.2/js.cookie.js"></script>
 </head>
 
 <body>
@@ -464,8 +449,7 @@
 		</section>
 		<section class="vr360" id="vr360">
 			<div class="vr-1">
-				<object type="image/svg+xml" data="icons/vr/360_view_ibivag7cow6n.svg"
-					aria-label="360-icon"></object>
+				<object type="image/svg+xml" data="icons/vr/360_view_ibivag7cow6n.svg" aria-label="360-icon"></object>
 				<h2>360<sup>o</sup> и VR-обзор вашего будущего интерьера</h2>
 			</div>
 			<div class="vr-2">
@@ -793,6 +777,18 @@
 									d="M328 112L184 256l144 144" /></svg></button>
 						<div class="portfolio__slider-container">
 							<div class="slider-slide active">
+								<img src="images/works/4/24.webp" alt="work-424">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/25.webp" alt="work-425">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/26.webp" alt="work-426">
+							</div>
+							<div class="slider-slide">
+								<img src="images/works/4/27.webp" alt="work-427">
+							</div>
+							<div class="slider-slide">
 								<img src="images/works/4/1.webp" alt="work-41">
 							</div>
 							<div class="slider-slide">
@@ -850,17 +846,18 @@
 								<img src="images/works/4/19.webp" alt="work-419">
 							</div>
 							<div class="slider-slide">
-								<img src="images/works/4/16.webp" alt="work-420">
+								<img src="images/works/4/20.webp" alt="work-420">
 							</div>
 							<div class="slider-slide">
-								<img src="images/works/4/17.webp" alt="work-421">
+								<img src="images/works/4/21.webp" alt="work-421">
 							</div>
 							<div class="slider-slide">
-								<img src="images/works/4/18.webp" alt="work-422">
+								<img src="images/works/4/22.webp" alt="work-422">
 							</div>
 							<div class="slider-slide">
-								<img src="images/works/4/19.webp" alt="work-423">
+								<img src="images/works/4/23.webp" alt="work-423">
 							</div>
+
 						</div>
 						<button class="portfolio__carousel-next" onclick="showImage(+1)"><svg xmlns="http://www.w3.org/2000/svg"
 								class="portfolio__forward" viewBox="0 0 512 512">
@@ -869,6 +866,10 @@
 					</div>
 					<div class="slider__dots">
 						<div class="slider__dot active"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
+						<div class="slider__dot"></div>
 						<div class="slider__dot"></div>
 						<div class="slider__dot"></div>
 						<div class="slider__dot"></div>
@@ -1033,6 +1034,7 @@
 				<ul>
 					<li>
 						<p class="contacts-info"><a class="contacts-info" href="https://pin.it/7m5enJh">Pinterest</a></p>
+						<p class="contacts-info"><a class="contacts-info" href="https://vk.com/rimma_design">ВКонтакте</a></p>
 					</li>
 				</ul>
 			</div>
@@ -1048,6 +1050,30 @@
 		</div>
 	</footer>
 
+	<div class="cookie-notification cookie-notification_hidden_yes">
+		<div class="cookie-notification__header">Мы используем Яндекс Метрику</div>
+		<div class="cookie-notification__body">
+			<p>Этот сайт использует сервис веб-аналитики Яндекс Метрика, предоставляемый компанией ООО «ЯНДЕКС», 119021,
+				Россия, Москва, ул. Л. Толстого, 16 (далее&nbsp;— Яндекс).</p>
+			<p>Сервис Яндекс Метрика использует технологию “cookie”&nbsp;— небольшие текстовые файлы, размещаемые на
+				компьютере пользователей с целью анализа их пользовательской активности.</p>
+			<p>Собранная при помощи cookie информация не может идентифицировать вас, однако может помочь нам улучшить работу
+				нашего сайта. Информация об использовании вами данного сайта, собранная при помощи cookie, будет передаваться
+				Яндексу и храниться на сервере Яндекса в ЕС и Российской Федерации. Яндекс будет обрабатывать эту информацию для
+				оценки использования вами сайта, составления для нас отчетов о деятельности нашего сайта, и предоставления
+				других услуг. Яндекс обрабатывает эту информацию в порядке, установленном в условиях использования сервиса
+				Яндекс Метрика.</p>
+			<p>Вы можете отказаться от использования cookies, выбрав соответствующие настройки в браузере. Также вы можете
+				использовать инструмент&nbsp;— https://yandex.ru/support/metrika/general/opt-out.html Однако это может повлиять
+				на работу некоторых функций сайта. Используя этот сайт, вы соглашаетесь на обработку данных о вас Яндексом в
+				порядке и целях, указанных выше.</p>
+		</div>
+		<div class="cookie-notification__buttons">
+			<button class="cookie-notification__button" id="yes">Я согласен</button>
+		</div>
+	</div>
+
+	<script src="js/ymetrica.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
 	<script src="js/mailerform.js"></script>
 	<script src="js/priceclick.js"></script>
