--- a/index.html
+++ b/index.html
@@ -38,7 +38,26 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.css">
 	<title>RimmaDesign.ru</title>
 	<script src="js/telmask.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.2/js.cookie.js"></script>
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+	m[i].l=1*new Date();
+	for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+	k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+	ym(93762633, "init", {
+			 clickmap:true,
+			 trackLinks:true,
+			 accurateTrackBounce:true,
+			 webvisor:true,
+			 ecommerce:"dataLayer"
+	});
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/93762633" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
 </head>
 
 <body>
@@ -1049,29 +1068,6 @@
 			</div>
 		</div>
 	</footer>
-
-	<div class="cookie-notification cookie-notification_hidden_yes">
-		<div class="cookie-notification__header">Мы используем Яндекс Метрику</div>
-		<div class="cookie-notification__body">
-			<p>Этот сайт использует сервис веб-аналитики Яндекс Метрика, предоставляемый компанией ООО «ЯНДЕКС», 119021,
-				Россия, Москва, ул. Л. Толстого, 16 (далее&nbsp;— Яндекс).</p>
-			<p>Сервис Яндекс Метрика использует технологию “cookie”&nbsp;— небольшие текстовые файлы, размещаемые на
-				компьютере пользователей с целью анализа их пользовательской активности.</p>
-			<p>Собранная при помощи cookie информация не может идентифицировать вас, однако может помочь нам улучшить работу
-				нашего сайта. Информация об использовании вами данного сайта, собранная при помощи cookie, будет передаваться
-				Яндексу и храниться на сервере Яндекса в ЕС и Российской Федерации. Яндекс будет обрабатывать эту информацию для
-				оценки использования вами сайта, составления для нас отчетов о деятельности нашего сайта, и предоставления
-				других услуг. Яндекс обрабатывает эту информацию в порядке, установленном в условиях использования сервиса
-				Яндекс Метрика.</p>
-			<p>Вы можете отказаться от использования cookies, выбрав соответствующие настройки в браузере. Также вы можете
-				использовать инструмент&nbsp;— https://yandex.ru/support/metrika/general/opt-out.html Однако это может повлиять
-				на работу некоторых функций сайта. Используя этот сайт, вы соглашаетесь на обработку данных о вас Яндексом в
-				порядке и целях, указанных выше.</p>
-		</div>
-		<div class="cookie-notification__buttons">
-			<button class="cookie-notification__button" id="yes">Я согласен</button>
-		</div>
-	</div>
 
 	<script src="js/ymetrica.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
